--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,7 +10,7 @@ jobs:
   publish:
     # Don't run just after creating repo from template
     # Also avoid running after merging set-up PR
-    if: github.run_number > 2 && github.event.repository.owner.login == 'react18-tools'
+    if: github.run_number > 2 && github.event.repository.owner.login == 'tiny-md'
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -35,8 +35,8 @@ jobs:
       - name: Test
         run: pnpm test
         working-directory: ./lib
-      # - name: Copy Readme file
-      # run: cp ./README.md ./lib # will be uncommented while rebranding
+      - name: Copy Readme file
+        run: cp ./README.md ./lib # will be uncommented while rebranding
       - name: Apply changesets, publish and create release, branches and tags
         run: node ./scripts/publish.js
         env:
