--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@repo/shared",
-  "version": "0.0.11",
+  "version": "0.0.0",
   "private": true,
   "sideEffects": false,
   "main": "./dist/index.js",
@@ -46,6 +46,7 @@
     "nextjs-themes": "^4.0.6",
     "r18gs": "^3.0.1",
     "react-live": "^4.1.8",
-    "react18-loaders": "workspace:*"
+    "react18-loaders": "latest",
+    "latex-math": "workspace:*"
   }
 }
