--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -18,8 +18,9 @@
     "nextjs-themes": "^4.0.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react18-loaders": "workspace:*",
-    "webgl-generative-particles": "^0.0.1"
+    "react18-loaders": "latest",
+    "webgl-generative-particles": "^0.0.1",
+    "latex-math": "workspace:*"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^15.2.3",
