--- a/examples/vite/package.json
+++ b/examples/vite/package.json
@@ -17,8 +17,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-mouse-trails": "^0.0.5",
-    "react18-loaders": "workspace:*",
-    "react18-themes": "^3.2.0"
+    "react18-loaders": "latest",
+    "react18-themes": "^3.2.0",
+    "latex-math": "workspace:*"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
