--- a/scripts/rebrand.config.json
+++ b/scripts/rebrand.config.json
@@ -1,6 +1,6 @@
 {
-  "owner": "react18-tools",
-  "repo": "turborepo-template",
-  "packageName": "react18-loaders",
-  "title": "React 18 Loaders"
+  "packageName": "latex-math",
+  "owner": "tiny-md",
+  "repo": "latex-math",
+  "title": "Latex Math"
 }
