Cleaned up features 💖 <a href=https://mayank-chaudhari.vercel.app target=_blank>Mayank Kumar Chaudhari</a> [skip ci]

--- a/package.json
+++ b/package.json
@@ -5,14 +5,12 @@
     "build": "turbo build",
     "clean": "turbo clean",
     "dev": "turbo dev",
-    "doc": "node scripts/doc.js && typedoc",
     "format": "prettier --write \"**/*.{ts,tsx,md,css,scss}\"",
     "lint": "turbo lint",
     "lint:fix": "turbo lint:fix",
     "test": "turbo test",
     "typecheck": "turbo typecheck",
-    "preinstall": "node scripts/update-pm.js",
-    "rebrand": "node scripts/rebrand.js"
+    "preinstall": "node scripts/update-pm.js"
   },
   "pre-commit": [
     "lint:fix",
@@ -22,17 +20,8 @@
     "@changesets/cli": "^2.28.1",
     "@repo/typescript-config": "workspace:*",
     "@types/node": "^22.13.10",
-    "enquirer": "^2.4.1",
-    "plop": "^4.0.1",
     "prettier": "^3.5.3",
-    "turbo": "^2.4.4",
-    "typedoc": "^0.28.1",
-    "typedoc-plugin-extras": "^4.0.0",
-    "typedoc-plugin-inline-sources": "^1.2.1",
-    "typedoc-plugin-mdn-links": "^5.0.1",
-    "typedoc-plugin-missing-exports": "^3.1.0",
-    "typedoc-plugin-rename-defaults": "^0.7.3",
-    "typedoc-plugin-zod": "^1.4.0"
+    "turbo": "^2.4.4"
   },
   "packageManager": "pnpm@10.6.5",
   "engines": {
