--- a/lib/package.json
+++ b/lib/package.json
@@ -3,7 +3,7 @@
   "author": "Mayank Kumar Chaudhari <https://mayank-chaudhari.vercel.app>",
   "private": false,
   "version": "0.0.0",
-  "description": "",
+  "description": "Parses LaTeX math strings—typically extracted from Markdown—and converts them into an abstract syntax tree (AST).",
   "license": "MPL-2.0",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
