fix: keep regular mode for re-parsing.

--- a/lib/package.json
+++ b/lib/package.json
@@ -66,22 +66,29 @@
     }
   ],
   "keywords": [
-    "React",
-    "React Loaders",
-    "React 18",
-    "React 19",
-    "Next.js",
-    "Next.js 14",
-    "Next.js 15",
-    "React server components",
+    "LaTeX",
+    "LaTeX parser",
+    "Math",
+    "Math-mode",
+    "Parser",
+    "AST",
+    "Abstract Syntax Tree",
+    "Parse LaTeX",
+    "Latex AST",
+    "unified",
+    "remark-math",
+    "Markdown",
+    "Vite",
+    "Frontend",
+    "Frontend tooling",
+    "Typescript",
+    "Web development",
+    "Modern",
+    "Lightweight",
+    "Compatibility",
+    "Seamless integration",
     "Customizable",
     "Cutting-edge",
-    "Compatibility",
-    "Frontend development",
-    "UI components",
-    "Web development",
-    "Progressive",
-    "Modern",
-    "Seamless integration"
+    "Progressive"
   ]
 }
