upgrade deps && docs [skip ci]

--- a/lib/package.json
+++ b/lib/package.json
@@ -28,21 +28,9 @@
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@testing-library/react": "^16.2.0",
-    "@types/node": "^22.13.10",
+    "@types/node": "^22.13.11",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
-    "@vitest/coverage-v8": "^3.0.9",
-    "esbuild-plugin-rdi": "^0.0.0",
-    "esbuild-plugin-react18": "0.2.6",
-    "esbuild-plugin-react18-css": "^0.0.4",
-    "jsdom": "^26.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tsup": "^8.4.0",
-    "typescript": "^5.8.2",
-    "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.0.9",
     "@unified-latex/unified-latex-ctan": "^1.8.2",
     "@unified-latex/unified-latex-types": "^1.8.0",
     "@unified-latex/unified-latex-util-arguments": "^1.8.2",
@@ -53,7 +41,19 @@
     "@unified-latex/unified-latex-util-print-raw": "^1.8.0",
     "@unified-latex/unified-latex-util-trim": "^1.8.2",
     "@unified-latex/unified-latex-util-visit": "^1.8.2",
-    "unified": "^11.0.5"
+    "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/coverage-v8": "^3.0.9",
+    "esbuild-plugin-rdi": "^0.0.0",
+    "esbuild-plugin-react18": "0.2.6",
+    "esbuild-plugin-react18-css": "^0.0.4",
+    "jsdom": "^26.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tsup": "^8.4.0",
+    "typescript": "^5.8.2",
+    "unified": "^11.0.5",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.0.9"
   },
   "funding": [
     {
