--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -13,20 +13,20 @@
   },
   "dependencies": {
     "@repo/shared": "workspace:*",
+    "latex-math": "workspace:*",
     "next": "^15.2.3",
     "nextjs-darkmode-lite": "^1.0.10",
     "nextjs-themes": "^4.0.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react18-loaders": "latest",
-    "webgl-generative-particles": "^0.0.1",
-    "latex-math": "workspace:*"
+    "react18-loaders": "^1.1.4",
+    "webgl-generative-particles": "^0.0.1"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^15.2.3",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@types/node": "^22.13.10",
+    "@types/node": "^22.13.11",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "typescript": "^5.8.2"
