--- a/examples/vite/package.json
+++ b/examples/vite/package.json
@@ -13,13 +13,13 @@
   },
   "dependencies": {
     "@repo/shared": "workspace:*",
+    "latex-math": "workspace:*",
     "nextjs-darkmode": "^1.0.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-mouse-trails": "^0.0.5",
-    "react18-loaders": "latest",
-    "react18-themes": "^3.2.0",
-    "latex-math": "workspace:*"
+    "react18-loaders": "^1.1.4",
+    "react18-themes": "^3.2.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
