--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -22,7 +22,7 @@
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@testing-library/react": "^16.2.0",
-    "@types/node": "^22.13.10",
+    "@types/node": "^22.13.11",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
@@ -42,11 +42,11 @@
     "@mayank1513/fork-me": "^2.1.3",
     "@repo/scripts": "workspace:*",
     "esbuild-raw-plugin": "^0.2.0",
+    "latex-math": "workspace:*",
     "nextjs-darkmode": "^1.0.10",
     "nextjs-themes": "^4.0.6",
     "r18gs": "^3.0.1",
     "react-live": "^4.1.8",
-    "react18-loaders": "latest",
-    "latex-math": "workspace:*"
+    "react18-loaders": "^1.1.4"
   }
 }
