--- a/lib/package.json
+++ b/lib/package.json
@@ -29,25 +29,20 @@
     "@repo/typescript-config": "workspace:*",
     "@testing-library/react": "^16.2.0",
     "@types/node": "^22.13.11",
-    "@types/react": "^19.0.12",
-    "@types/react-dom": "^19.0.4",
     "@unified-latex/unified-latex-ctan": "^1.8.2",
     "@unified-latex/unified-latex-types": "^1.8.0",
     "@unified-latex/unified-latex-util-arguments": "^1.8.2",
     "@unified-latex/unified-latex-util-catcode": "^1.8.2",
     "@unified-latex/unified-latex-util-environments": "^1.8.2",
     "@unified-latex/unified-latex-util-match": "^1.8.0",
-    "@unified-latex/unified-latex-util-pegjs": "^1.8.1",
     "@unified-latex/unified-latex-util-print-raw": "^1.8.0",
     "@unified-latex/unified-latex-util-visit": "^1.8.2",
-    "@vitejs/plugin-react": "^4.3.4",
     "@vitest/coverage-v8": "^3.0.9",
+    "esbuild": "^0.25.1",
+    "esbuild-plugin-peggy": "^0.0.0",
     "esbuild-plugin-rdi": "^0.0.0",
-    "esbuild-plugin-react18": "0.2.6",
-    "esbuild-plugin-react18-css": "^0.0.4",
     "jsdom": "^26.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "peggy": "^4.2.0",
     "tsup": "^8.4.0",
     "typescript": "^5.8.2",
     "unified": "^11.0.5",
