--- a/lib/package.json
+++ b/lib/package.json
@@ -12,6 +12,13 @@
   "bugs": "https://github.com/tiny-md/latex-math/issues",
   "homepage": "https://github.com/tiny-md/latex-math/#readme",
   "sideEffects": false,
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    }
+  },
   "files": [
     "dist/**"
   ],
